k8s/apps/ip/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodejs-ip
  name: nodejs-ip
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-ip
  strategy: {}
  template:
    metadata:
      labels:
        app: nodejs-ip
    spec:
      containers:
        - image: kenesparta/nodejs-ip:latest
          name: nodejs-ip
          ports:
            - containerPort: 3000
          resources: {}
