k8s/apps/ip/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ip
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /ip
            pathType: ImplementationSpecific
            backend:
              service:
                name: nodejs-ip
                port:
                  number: 3000
